--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     html,body{height:100%;}
     body{
+      padding-top: 40px;
       margin:0;
       background:var(--bg);
       font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
