--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     .small { font-size:14px; font-weight:600; color: rgba(255,255,255,0.95); opacity:0.95; margin-bottom:6px; }
 
-    .date{
+    #date{
       font-size:28px;
       font-weight:800;
       color:#fff;
@@ -112,7 +112,10 @@
       margin:6px 0 20px;
       cursor:pointer;
     }
-
+    .grid-container
+    {
+      overflow: auto; 
+    }
     .info{
       text-align:center;
       color:rgba(255,255,255,0.95);
@@ -120,6 +123,14 @@
       font-size:18px;
       line-height:1.25;
       margin-bottom:8px;
+    }
+    #countdown
+    {
+      color:rgba(255,255,255,0.95);
+      font-weight:700;
+      font-size:18px;
+      float: right;
+      padding-left: 5px;
     }
 
     .subtext{font-size:12px; color:rgba(255,255,255,0.9); font-weight:500}
@@ -176,8 +187,14 @@
     <div class="content">
       <div style="height:6px"></div>
       <div class="card">
-        <div class="small">Adult 20 Ride Card</div>
-        <div class="date">Tue Jan 07 2025</div>
+        <div class="small">Adult 10 Ride Card</div>
+        <div id="date"></div>
+        <script>
+    const now = new Date();
+    const options = { weekday: 'short', month: 'short', day: 'numeric', year: 'numeric' };
+    const formatted = now.toLocaleDateString('en-US', options);
+    document.getElementById("date").textContent = formatted;
+  </script>
         <div id="time">1</div>
         <script>
     function pad(n){ return String(n).padStart(2, '0'); }
@@ -203,8 +220,28 @@
         </div>
 
         <button class="expire-btn">Expire</button>
+        <div class="grid-container">
+          <div class="info">This pass expires after <div id="countdown"></div></br>minutes</div>
+        </div>
+        <script>
+    let minutes = 120; // starting value
+    const display = document.getElementById("countdown");
 
-        <div class="info">This pass expires after 116<br/>minutes</div>
+    function updateCountdown() {
+      display.textContent = minutes;
+      minutes--;
+
+      if (minutes < 0) {
+        minutes = 120; // reset when finished
+        display.textContent = minutes;
+      }
+    }
+
+    // update immediately
+    updateCountdown();
+    // update every 60,000 ms (1 minute)
+    setInterval(updateCountdown, 60000);
+  </script>
         <div class="subtext" style="margin-top:8px">User ID 1111697050</div>
       </div>
     </div>
@@ -214,7 +251,7 @@
         <div class="nav-item">
           <div class="nav-icon">
             <!-- home icon -->
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"><path d="M3 10.5L12 4l9 6.5V20a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1V10.5z"/></svg>
+            <svg width="40" height="35" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M3 10.5L12 4l9 6.5V20a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1V10.5z"/></svg>
           </div>
           <div>Home</div>
         </div>
@@ -222,23 +259,23 @@
         <div class="nav-item">
           <div class="nav-icon">
             <!-- parking icon -->
-            <img src="p.png" width="40" height="40" >
+            <img src="p.png" width="40" height="35" >
           </div>
           <div>Parking</div>
         </div>
 
         <div class="nav-item center">
-          <div class="nav-icon" style="width:56px;height:56px;border-radius:12px">
-            <!-- transit icon -->
-            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#0b7285" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="12" rx="2"/><path d="M7 20v-2"/><path d="M17 20v-2"/></svg>
+          <div class="nav-icon">
+            <!-- parking icon -->
+            <img src="t.png" width="40" height="35" >
           </div>
           <div>Transit</div>
         </div>
 
         <div class="nav-item">
           <div class="nav-icon">
-            <!-- permits icon -->
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#222" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M7 7h10"/></svg>
+            <!-- parking icon -->
+            <img src="pr.png" width="40" height="35" >
           </div>
           <div>Permits</div>
         </div>
