--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="agency">Barrie Transit</div>
 
         <div class="bus-illustration" aria-hidden="true">
-          <video width="5000" height="140"  autoplay muted loop>
+          <video width="5000" height="140"  autoplay muted loop playsinline>
             <source src="movie.mp4" type="video/mp4">
           </video>
         </div>
