--- a/index.html
+++ b/index.html
@@ -87,15 +87,21 @@
     }
 
     .bus-illustration{
-      width:420px;
+      width:85%;
       height:140px;
       border-radius:6px;
       display:flex;
       align-items:stretch;
       justify-content:stretch;
       margin-bottom:18px;
+      overflow: hidden;
       box-shadow:0 8px 20px rgba(0,0,0,0.06);
     }
+    .bus-illustration video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* makes video stretch & crop nicely */
+  }
 
     /* expire button */
     .expire-btn{
@@ -218,7 +224,7 @@
         <div class="agency">Barrie Transit</div>
 
         <div class="bus-illustration" aria-hidden="true">
-          <video width="5000" height="140"  autoplay muted loop playsinline>
+          <video width="320" height="140"  autoplay muted loop playsinline>
             <source src="movie.mp4" type="video/mp4">
           </video>
         </div>
